<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/support_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_support_you_provided"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        app:fontFamily="@font/poppins_bold_new" />

    <!-- Checkboxes -->
    <LinearLayout
        android:id="@+id/checkbox_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/food_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/cb_square_green"
            android:drawablePadding="9dp"
            android:minHeight="36dp"
            android:text="@string/food_drinks"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_regular" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/clothes_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/cb_square_green"
            android:drawablePadding="9dp"
            android:minHeight="36dp"
            android:text="@string/clothes"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_regular" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/hygiene_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/cb_square_green"
            android:drawablePadding="9dp"
            android:minHeight="36dp"
            android:text="@string/hygiene"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_regular" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/wellness_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/cb_square_green"
            android:drawablePadding="9dp"
            android:minHeight="36dp"
            android:text="@string/wellness_emotional_support"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_regular" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/medical_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/cb_square_green"
            android:drawablePadding="9dp"
            android:minHeight="36dp"
            android:text="@string/medical_help"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_regular" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/social_worker_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/cb_square_green"
            android:drawablePadding="9dp"
            android:minHeight="36dp"
            android:text="@string/social_work_psychiatrist"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_regular" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/legal_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/cb_square_green"
            android:drawablePadding="9dp"
            android:minHeight="36dp"
            android:text="@string/lawyer_legal"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_regular" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/other_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/cb_square_green"
            android:drawablePadding="9dp"
            android:minHeight="36dp"
            android:text="@string/other"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_regular" />

        <!-- Other Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilOther"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:hintEnabled="false"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="@color/gray700"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/other_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:hint="@string/if_other_please_specify_here"
                android:gravity="start"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:background="@drawable/rounded_border_field"
                android:includeFontPadding="false"
                android:inputType="textCapSentences"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp" />

</LinearLayout>
