<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/support_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/interaction_log_question_1"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:fontFamily="@font/poppins_bold_new" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/first_name"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"
            app:fontFamily="@font/poppins_bold_new" />

        <EditText
            android:id="@+id/input_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/last_name"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"
            app:fontFamily="@font/poppins_bold_new" />

        <EditText
            android:id="@+id/input_email"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/email"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"
            app:fontFamily="@font/poppins_bold_new" />

        <EditText
            android:id="@+id/input_phone_number"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/phone_number"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            android:inputType="phone"
            android:maxLength="17"
            android:layout_marginBottom="16dp"
            app:fontFamily="@font/poppins_bold_new" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp" />

</LinearLayout>
